--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,19 +26,13 @@
 
 <ul>
   <li>
-    <a href="/todos">Todos</a>
-  </li>
-  <li>
     <a href="/names">Names</a>
   </li>
   <li>
-    <a href="/names.json">Names (JSON)</a>
+    <a href="/names/json">Names (JSON)</a>
   </li>
   <li>
     <a href="/form">Form</a>
-  </li>
-  <li>
-    <a href="/about">About</a>
   </li>
   <li>
     <a href="/download-database" download="database.db">
